# lintric

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md
cli/: Cargo.toml  README.md
cli/src/: display.rs  file_processor.rs  html_output.rs  lib.rs  logger.rs  main.rs
cli/templates/: file.html
cli/tests/: test_main.rs
cli/tests/fixtures/: temp_test_file.rs
cli/tests/fixtures/multiple/: file1.rs
cli/tests/snapshots/: test_main__basic_analysis.snap  test_main__complex_rust_analysis.snap  test_main__complex_typescript_analysis.snap  test_main__debug_ast_rust.snap  test_main__debug_ast_typescript.snap  test_main__debug_definition_rust.snap  test_main__debug_definition_typescript.snap  test_main__debug_dependency_rust.snap  test_main__debug_ir_rust.snap  test_main__debug_ir_typescript.snap  test_main__json_output.snap  test_main__multiple_files_analysis.snap
crates/cli/: Cargo.toml
crates/cli/src/: logger.rs  main.rs
crates/cli/templates/: file.html  index.html
crates/cli/tests/: test_main.rs
crates/cli/tests/fixtures/: complex_typescript_code.ts
crates/cli/tests/snapshots/: test_main__basic_analysis.snap  test_main__complex_rust_analysis.snap  test_main__complex_typescript_analysis.snap  test_main__debug_ast_rust.snap  test_main__debug_ir_rust.snap  test_main__debug_ir_typescript.snap  test_main__json_output.snap  test_main__multiple_files_analysis.snap
crates/core/: Cargo.toml  README.md
crates/core/src/: advanced_shadowing_system.rs  ast_formatter.rs  definition_collectors.rs  definition_context.rs  dependency_resolver.rs  enhanced_dependency_resolver.rs  file_parser.rs  lib.rs  mod.rs  nested_scope_resolver.rs  optimized_shadowing_resolver.rs  scope_aware_resolver.rs  scope_aware_symbol_lookup.rs  scope_builder.rs  scope_integration.rs  shadowing_aware_dependency_resolver.rs  shadowing_resolver.rs  usage_collector.rs
crates/core/src/dependency_resolver/: associated_type_resolver.rs  base_resolver.rs  constraint_solver.rs  lifetime_resolver.rs  main_resolver.rs  method_resolver.rs  mod.rs  (+8 more)
crates/core/tests/: mod.rs  test_utils.rs
generated-tests/: Cargo.toml
generated-tests/src/: language_plugin.rs  lib.rs  test_helpers.rs
generated-tests/src/plugins/: mod.rs
generated-tests/tests/: rust.rs  tsx.rs  typescript.rs
(+1276 files in other folders)
