[package]
name = "lintric-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
lintric-core = { path = "../core" }
serde_json = "1.0"
comfy-table = "7.0.1"
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
syntect = "5.2.0"

[dev-dependencies]
insta = "1.34.0"
