[package]
name = "lintric-generated-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
lintric-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = "1.34.0"

[[bin]]
name = "test_generator"
path = "src/bin/test_generator.rs"

[[test]]
name = "generated_tests"
path = "tests/mod.rs"