[package]
name = "lintric-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
lintric-core = { path = "../core" }
clap = { version = "4.5.57", features = ["derive"] }
comfy-table = "7.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syntect = "5.3.0"
tera = "1.20.1"

[dev-dependencies]
insta = "1.46.3"
