[package]
name = "lintric-core"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.22.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.21.1"

[dev-dependencies]
insta = "1.46.3"

[[test]]
name = "integration_tests"
path = "tests/mod.rs"

